# clash-royale-deck-doctor

./: README.md  docker-compose.yml  pyproject.toml  test_main.http
app/: main.py
app/api/v1/: players.py
app/domain/models/: battle.py  card.py  enums.py  stats.py
app/domain/repositories/: battle_repository.py  card_repository.py
app/domain/services/: battle_analysis_service.py  deck_classifier.py  diagnosis_engine.py  matchup_detector.py
app/infrastructure/cache/: redis_client.py  redis_setup.py
app/infrastructure/database/: session.py
app/infrastructure/database/mappers/: battle_mapper.py
app/infrastructure/database/models/: battle_model.py  card_model.py
app/infrastructure/repository/: redis_battle_repository.py  sql_battle_repository.py
app/schemas/: analysis_schema.py  refresh_schema.py
app/use_cases/: analyze_player.py  refresh_player.py
deck-doctor-frontend/: index.html  package-lock.json  package.json
deck-doctor-frontend/src/: App.css
deck-doctor-frontend/src/api/: deckDoctorApi.ts
deck-doctor-frontend/src/components/dashboard/: Diagnosis.tsx  Matchups.tsx  Overview.tsx  SearchHeader.tsx  WinrateChart.tsx
deck-doctor-frontend/src/pages/: Home.tsx
deck-doctor-frontend/src/types/: deckDoctor.ts
